# SwRenderer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  suzanne.tga  suzanne_light.tga
fileFormats/: CMakeLists.txt  FileUtils.h  FileUtils_impl.hpp  FileWriter_impl.hpp  OBJGeometry.cpp  OBJGeometry.h  TGA.cpp  TGA.h
fileIO/: FileFormats.h  FileReader.h  FileReader_impl.hpp  FileUtils.h  FileUtils_impl.hpp  FileWriter.h  FileWriter_impl.hpp
geometryFormats/: CMakeLists.txt  OBJGeometry.cpp  OBJGeometry.h
image/: image.cpp  image.h
imageFormats/: CMakeLists.txt  TGAImage.cpp  TGAImage.h
lineAlgorithm/: CMakeLists.txt  LineRasterizeAlgorithm.cpp  LineRasterizeAlgorithm.h
math/: CMakeLists.txt  Vector3D.hpp
renderUtils/: AttachmentInfo.h  CMakeLists.txt  CommandBuff.h  CommandBuff_impl.hpp  Geometry.h  Image.h  ImageFormat.h  Image_impl.hpp  Memory.h  Mesh.h  Pipeline.h  Render.h  RenderBuffer.h  RenderCmd.h  RenderInfo.h  Render_impl.hpp
triangleAlgorithm/: CMakeLists.txt  Triangle.cpp  Triangle.h
